--- a/style.css
+++ b/style.css
@@ -11,10 +11,41 @@
     margin-bottom:0px;
 }
 
+.navbar-inverse .navbar-toggle .icon-bar {
+    background-color: black;
+}
 
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus,
 .navbar-inverse .navbar-header > a:hover, 
 .navbar-inverse .navbar-header > a:focus {
     color:black;
+}
+
+.fa {
+    margin: 10px;
+    padding: 10px;
+    font-size: 15px;
+    width: 35px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
 }
