--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,8 @@ body {
     font-family: 'Open Sans', sans-serif;    
 }
 
-.container {
-    max-width: 700px;
-    width: 100%;
-    margin: auto;
-    padding: 20px;
-}
-
 .navbar {
+    background-color: rgba(0, 0, 0, .9);
     position: fixed;
     width: 100%;
     color:white;
@@ -73,17 +67,6 @@ body {
     box-shadow: 10px 10px 35px -10px rgba(0,0,0,0.75);
 }
 
-
-section#section-code {
-    margin-top: 0px;
-}
-
-section {
-    margin: 40px 0px;
-    padding: 10px;
-    font-size: 1.2em;
-} 
-
 .header-big-picture h1 {
     font-size:4em;
     margin: 0px;
@@ -94,7 +77,33 @@ section {
 .header-big-picture .button {
     color: inherit;
     display: block;  
-    margin: 150px;  
+    margin-top: 100px;  
+}
+
+
+section#section-code {
+    margin-top: 0px;
+}
+
+section {
+    margin: 0px;
+    padding: 40px 10px;
+    font-size: 1.2em;
+} 
+
+section h2 {
+    margin-top:10px;
+}
+
+section:nth-child(odd) {
+    background-color: #e0e0e0;
+}
+
+.container {
+    max-width: 700px;
+    width: 100%;
+    margin: auto;
+    padding: 0px 20px;
 }
 
 .button a {
