--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@ body {
 .navbar {
     background-color: rgba(0, 0, 0, .9);
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     color:white;
     border-bottom-style: solid;
