--- a/css/style.css
+++ b/css/style.css
@@ -72,14 +72,12 @@ body {
 .header-big-picture h1 {
     font-size:4em;
     margin: 0px;
-    margin-top: 40px;
     padding: 0px;
 }
 
 .header-big-picture .button {
+    display: block;
     color: inherit;
-    display: block;  
-    margin-top: 100px;  
 }
 
 
@@ -90,8 +88,9 @@ section#section-code {
 section {
     display: flex;
     flex-direction: column;
+    text-align: justify;
     margin: 0px;
-    padding: 40px 10px;
+    padding: 40px 24px;
     min-height: 350px;
     font-size: 1.2em;
 } 
@@ -101,7 +100,7 @@ section h2 {
 }
 
 section:nth-child(even) {
-    background-color: #e0e0e0;
+    background-color: #f9f9f9;
 }
 
 .container {
