--- a/css/style.css
+++ b/css/style.css
@@ -52,24 +52,26 @@ body {
 }
 
 .header-picture.index {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9) ), url('../img/index-header.jpg');    
+    background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('../img/index-header.jpg');    
 }
 
 .header-picture.code {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.73) ), url('../img/code-header.png');        
+    background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('../img/code-header.png');        
 }
 
 .header-picture.music {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.73) ), url('../img/music-header-far-alt.jpg');
+    background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('../img/music-header.jpg');
     background-position: 50% 50%;    
 }
 
 .header-picture.volunteer {
     background-image: linear-gradient( rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5) ), url('../img/WHS-&-Honduras-in-DC_web.jpg');
+    background-position: 50% 40%;        
 }
 
 .header-picture.robotics {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5) ), url('../img/josh-2017-robot.jpg');
+    background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('../img/josh-2017-robot.jpg');
+    background-position: 50% 13%;        
 }
 
 .header-picture{
@@ -96,8 +98,14 @@ body {
     height: 450px;
 }
 
-.header-big-picture h1 {
-    font-size:4em;
+.header-picture.big h1 {
+    font-size:5em;
+    margin: 0px;
+    padding: 0px;
+}
+
+.header-picture.small h1 {
+    font-size:10em;
     margin: 0px;
     padding: 0px;
 }
