--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+a {
+    text-decoration: none;
+    color: #5795f9;
+}
+
 html {
     margin: 0px;
     padding: 0px 0px;
@@ -25,6 +30,7 @@ body {
 .navbar-flex {
     width:100%;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
 }
 
@@ -34,7 +40,7 @@ body {
 
 .navbar-logo {
     margin: 0px;
-    padding: 14x;
+    padding: 0px;
 }
 
 .navbar ul {
@@ -46,17 +52,18 @@ body {
 .navbar ul li {
     display: inline-block;
     margin: 0px;
+    
 }
 
 .navbar a {
     color:white;
     text-decoration: none;
     display: block;
-    padding: 10px;
+    padding: 13px;
 }
 
 .header-picture.index {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('../img/index-header.jpg');    
+    background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../img/index-header.jpg');    
 }
 
 .header-picture.about {
@@ -124,7 +131,7 @@ body {
     color: inherit;
 }
 
-section#section-code {
+section#about section#background {
     margin-top: 0px;
 }
 
@@ -134,7 +141,7 @@ section {
     text-align: left;
     margin: 0px;
     padding: 40px 24px;
-    min-height: 350px;
+    min-height: 300px;
     font-size: 1.2em;
     white-space: wrap;
     overflow: hidden;
@@ -142,6 +149,7 @@ section {
 
 section h2 {
     margin-top:10px;
+    text-decoration: none;        
 }
 
 section:nth-child(even) {
@@ -152,7 +160,7 @@ section:nth-child(even) {
     max-width: 1000px;
     width: 100%;
     margin: auto;
-    padding: 0px 50spx;
+    padding: 0px 50px;
 }
 
 .button a {
