Remove padding on container on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,10 @@ img.circle {
 
 
 @media screen and (max-width: 768px) {
+    .container {
+        padding: 0px;
+    }
+    
     .navbar ul{
         display: none;
     }
