Added a mobile navbar dropdown

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
     display: flex;
     justify-content: space-between;
     line-height: 50px;
+    padding: Opx 20px;    
 }
 
 .navbar {
@@ -71,7 +72,6 @@ body {
 .navbar ul li {
     display: inline-block;
     margin: 0px;
-    
 }
 
 .navbar a {
@@ -85,6 +85,37 @@ body {
     background-color: rgba(255, 255, 255, .9);
     color: black;
     transition: 0.3s;
+}
+
+#dropdown-nav {
+    width: 100vw;
+    position: fixed;
+    top: 50px;
+    left: 0px;
+    background-color: rgba(0, 0, 0, .9);
+    display: none;
+    transition: 1.0s;
+}
+
+#dropdown-nav ul {
+    display: block;
+    list-style: none;
+    padding: 0px 20px;
+    padding-left: 0px;
+    margin: 0px;
+}
+
+#dropdown-nav ul a {
+    display: inline-block;
+    padding: 10px 10px;
+    color: white;
+    width: 100%;
+    text-transform: uppercase;    
+}
+
+#dropdown-nav ul a:hover {
+    background-color: rgba(255, 255, 255, 0.9);
+    color: black;
 }
 
 .header-picture.index {
@@ -314,7 +345,8 @@ img.circle {
 
 @media screen and (max-width: 768px) {
     .container {
-        padding: 0px;
+        padding: 5px;
+        font-size: .8em;
     }
 
     .header-picture.small h1 {
